# Auto-insurance-pricing-api

./: .gitignore  Dockerfile  README.md  app.py  interface.py  main.py  pyproject.toml  requirements.txt  test_unitaire.py
.github/workflows/: ci.yml
models/: feature_names.pkl  model_frequency.pkl  model_severity.pkl
pricing_model/: prediction_frequence.csv  prediction_severite.csv
severity_model/: submission_final.csv  submission_final_114.csv
src/: check_results.py  evaluation.py  frequency.py  preprocessing.py  prime_cv.py  severity.py  visualization.py
tests/: test_api.py  test_preprocessing.py
